✅ PIC-799: Change access restrictions for offenders to apply by default and opt out using scopes